cronos-pos-k8s-template/template-cronos-pos-node.yaml
## =================================================
## Cronos-POS Node State-SYnc
## Kubernetes with Kustomize Template
## List of Kind:
## - StatefulSet, Service, Ingress, PersistentVolumeClaim
## =================================================

## Kind: Deployment
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: template-cronos-pos-node
  namespace: cronos-pos
  labels:
    app: template-cronos-pos-node
    crypto-pos.org/service: cronos-pos-node
spec:
  selector:
    matchLabels:
      app: template-cronos-pos-node
  template:
    metadata:
      labels:
        app: template-cronos-pos-node
    spec:
      containers:
        ## chain-maind with state-sync enabled
        - name: chain-main-statesync-enabled
          image: heronimus/cronospos-chain-main:4.2.9
          command:
            - bash
            - -c
            - "./cronospos-enable-statesync.sh --custom-height=${CUSTOM_HEIGHT} && chain-maind start"
          resources:
            ## IMPORTANT: due to current resource limitation,
            ## this deployment resource request/limit are for evaluations only, not for Production
            limits:
              cpu: 1000m
              memory: 1500Mi
            requests:
              cpu: 500m
              memory: 1000Mi
          ports:
            - name: tendermint-p2p
              containerPort: 26656
              protocol: TCP
            - name: tendermint-rpc
              containerPort: 26657
              protocol: TCP
            - name: rest
              containerPort: 1317
              protocol: TCP
            - name: grpc
              containerPort: 9090
              protocol: TCP
          volumeMounts:
            - mountPath: /chain-main/.chain-maind/
              name: cronos-data-volume
      volumes:
        - name: cronos-data-volume
          persistentVolumeClaim:
            claimName: template-cronos-pos-node

## Kind: Service
---
apiVersion: v1
kind: Service
metadata:
  name: template-cronos-pos-node
  namespace: cronos-pos
  labels:
    app: template-cronos-pos-node
    crypto-pos.org/service: cronos-pos-node
spec:
  selector:
    app: template-cronos-pos-node
  ports:
    - name: tendermint-p2p
      port: 26656
      targetPort: 26656
      protocol: TCP
    - name: tendermint-rpc
      port: 26657
      targetPort: 26657
      protocol: TCP
    - name: rest
      port: 1317
      targetPort: 1317
      protocol: TCP
    - name: grpc
      port: 9090
      targetPort: 9090
      protocol: TCP

## Kind: Ingress Rule
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: template-cronos-pos-node
  namespace: cronos-pos
  labels:
    app: template-cronos-pos-node
    crypto-pos.org/service: cronos-pos-node
spec:
  rules:
    ## template
    - host: rpc-template-cronos-pos-node.cronos.heronimus.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: template-cronos-pos-node
                port:
                  number: 26657
    - host: rest-template-cronos-pos-node.cronos.heronimus.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: template-cronos-pos-node
                port:
                  number: 1317
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: template-cronos-pos-node-grpc
  namespace: cronos-pos
  labels:
    app: template-cronos-pos-node-grpc
    crypto-pos.org/service: cronos-pos-node
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: wildcard-grpc-cronos-heronimus-id
      hosts:
        - grpc-template-cronos-pos-node.grpc-cronos.heronimus.id
  rules:
    ## template
    - host: grpc-template-cronos-pos-node.grpc-cronos.heronimus.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: template-cronos-pos-node
                port:
                  number: 9090
